# sg3_utils

./: BSD_LICENSE  CMakeLists.txt  COPYING  COVERAGE  CREDITS  ChangeLog  Makefile.am  README  README.details  README.freebsd  cmake_del_artifacts.sh  config.h.in.cmake  configure.ac  debian_build.sh  sg3_utils.man8.html  sg3_utils.spec
.github/workflows/: ci.yml
debian/: changelog  control  copyright  libsgutils2-dev.install  rules
doc/: CMakeLists.txt  Makefile.am  README  cmake_del_artifacts.sh  rescan-scsi-bus.sh.8  sg3_utils.8  sg3_utils_json.8  sg_compare_and_write.8  sg_dd.8  sg_decode_sense.8  sg_format.8  sg_get_elem_status.8  sg_get_lba_status.8  sg_inq.8  sg_logs.8  sg_luns.8  sg_map.8  sg_map26.8  sg_modes.8  sg_opcodes.8  sg_persist.8  sg_rbuf.8  sg_read_block_limits.8  sg_readcap.8  sg_referrals.8  sg_rem_rest_elem.8  sg_rep_zones.8  sg_reset.8  sg_rmsn.8  sg_sat_datetime.8  sg_sat_identify.8  sg_sat_phy_event.8  sg_sat_set_features.8  sg_seek.8  sg_senddiag.8  sg_ses.8  sg_ses_microcode.8  sg_start.8  sg_stream_ctl.8  sg_turs.8  (+8 more)
examples/: Makefile  README
include/: CMakeLists.txt  Makefile.am  cmake_del_artifacts.sh  sg_json.h  sg_json_sg_lib.h  sg_lib.h  sg_lib_names.h  sg_nvme.h  sg_pr2serr.h  sg_pt_linux.h  sg_pt_linux_missing.h  sg_snt.h  sg_unaligned.h
inhex/: README  get_elem_status.hex  get_lba_status.hex  inq_emc_symm.hex  inq_standard.raw  luns_lu_cong.hex  luns_wlun.hex  stream_ctl_get.hex  stream_ctl_open.hex  tst_script.sh  vpd_atai.hex  vpd_di_bad_all.hex  vpd_di_name_inject.hex  vpd_di_old_emc_symm.hex  vpd_fp.hex  vpd_nvmei.hex  vpd_tpc.hex  vpd_zbdc.raw  wr_mode_cont.hex  wr_mode_mask.hex
lib/: CMakeLists.txt  Makefile.am  cmake_del_artifacts.sh  getopt_long.c  sg_cmds_basic.c  sg_json.c  sg_json_builder.h  sg_json_sg_lib.c  sg_lib.c  sg_lib_data.c  sg_lib_names.c  sg_pr2serr.c  sg_pt_common.c  sg_pt_freebsd.c  sg_pt_linux.c  sg_pt_linux_nvme.c  sg_pt_solaris.c  sg_pt_win32.c  sg_snt.c
scripts/: 00-scsi-sg3_config.rules  55-scsi-sg3_id.rules  CMakeLists.txt  Makefile.am  README  cmake_del_artifacts.sh  rescan-scsi-bus.sh  scsi_logging_level
src/: CMakeLists.txt  Makefile.am  cmake_del_artifacts.sh  sg_copy_results.c  sg_dd.c  sg_decode_sense.c  sg_emc_trespass.c  sg_format.c  sg_get_elem_status.c  sg_get_lba_status.c  sg_inq.c  sg_inq_data.c  sg_logs.c  sg_logs_vendor.c  sg_luns.c  sg_modes.c  sg_opcodes.c  sg_raw.c  sg_rdac.c  sg_read.c  sg_read_block_limits.c  sg_requests.c  sg_safte.c  sg_sat_datetime.c  sg_senddiag.c  sg_ses.c  sg_ses_microcode.c  sg_stream_ctl.c  sg_turs.c  sg_unmap.c  sg_vpd.c  sg_vpd_common.c  sg_vpd_common.h  sg_vpd_vendor.c  sg_wr_mode.c  sg_write_x.c  sg_xcopy.c  sginfo.c  sgm_dd.c  sgp_dd.c
testing/: Makefile  sg_chk_asc.c  sg_chk_inq_vd.c  sg_mrq_dd.cpp  sg_tst_async.cpp  sg_tst_context.cpp  sg_tst_json_builder.c  sg_tst_nvme.c  sgh_dd.cpp  tst_sg_lib.c
ttesting/: random_write_cp_verify.sh  sg_chk_asc.c  sg_chk_inq_vd.c  sg_mrq_dd.cpp  sg_take_snap.c  sg_tst_async.cpp  sg_tst_context.cpp  sg_tst_excl.cpp  sg_tst_excl2.cpp  sg_tst_excl3.cpp  sg_tst_json_builder.c  sg_tst_nvme.c  sgh_dd.cpp
utils/: README  hxascdmp.c
